Fixnul jsem auto_grow a dal nějaký kód do poznámek, který by mohl pomoct overflow background color effectu (funkce se spustí až po nějakém inputu v textarea [OPRAVIT])

--- a/css/_textarea.scss
+++ b/css/_textarea.scss
@@ -2,7 +2,8 @@
 
 textarea {
     resize: none;
-    padding: 5px 5px 2px 10px;
+    overflow: hidden;
+    padding: 5px 5px 27px 10px;
     min-width: 500px;
     height: 100px;
     font-size: 1em;
