--- a/css/base.css
+++ b/css/base.css
@@ -72,7 +72,8 @@ form div p {
 
 textarea {
   resize: none;
-  padding: 5px 5px 2px 10px;
+  overflow: hidden;
+  padding: 5px 5px 27px 10px;
   min-width: 500px;
   height: 100px;
   font-size: 1em;
